--- a/index_1.html
+++ b/index_1.html
@@ -14,14 +14,14 @@
     <body>
         <!--Header Section-->
         <header>
-            <a href="#" class="logo"><img src="images/logo.png"></a>
+            <a href="#" class="logo"><img src="images/logo_1.png"></a>
             <ul class="navbar">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="pages.html">Pages</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="formulario_1.html">FORMULARIO</a></li>
             </ul>
 
             <div class="icons">
@@ -32,61 +32,63 @@
             </div>
         </header>
 
-        <!--Home Section-->
+        <!--Home Section,se cambia foto y dialogo-->
         <section class="home">
             <div class="home-text">
-                <h4>Encuentra lo último en tendencia</h4>
-                <h1>Exclusiva colección para todo público</h1>
-                <a href="#" class="btn">Encuentralo ahora mismo</a>
+                <!--Se modifica foto y texto-->
+                <h4>Cuidamos tu piel</h4>
+                <h1>Mas de 1000 productos de belleza. </h1>
+                <a href="#" class="btn">Encuentralos ahora mismo</a>
             </div>
             <div class="home-img">
-                <img src="images/model-picture.jpg">
+                <img src="images/mujer_2.jpg">
             </div>
         </section>
 
-        <!--Feacture Section-->
+        <!--Feacture Section, se cambia texto y fotos-->
         <section class="feacture">
             <div class="middle-text">
-                <h2>Encuentra <span>Buenos Productos</h2>
+                <h2>Encuentra <span>Buenos Productos, cometicos, limpieza y mas..</h2>
             </div>
 
             <div class="feature-content">
                 <div class="row row1">
                     <div class="main-row">
                         <div class="row-text">
-                            <h6>Descubre las nuevas tendencias</h6>
-                            <h3>Haz un presente <br> de tu elección</h3>
+                            <!--Se modifica foto y texto-->
+                            <h6>frescura y elegancia</h6>
+                            <h3>Elegi tu color favorito <br> El labial de tu elección</h3>
                             <a href="#" class="row-btn">Show me all</a>
                         </div>
                     </div>
                     <div class="row-img">
-                        <img src="images/pantalon2.png">
+                        <img src="images/labial_2.jpg">
                     </div>
                 </div>
 
                 <div class="row row2">
                     <div class="main-row">
                         <div class="row-text">
-                            <h6>Descubre las nuevas tendencias</h6>
-                            <h3>Haz un presente <br> de tu elección</h3>
+                            <h6>Cremas de limpieza y humectacion</h6>
+                            <h3>Aloe vera <br> y acido hialuronico</h3>
                             <a href="#" class="row-btn">Show me all</a>
                         </div>
                     </div>
                     <div class="row-img">
-                        <img src="images/zapatillas.jpg">
+                        <img src="images/crema_limpieza_humectacion.jpg">
                     </div>
                 </div>
 
                 <div class="row row3">
                     <div class="main-row">
                         <div class="row-text">
-                            <h6>Descubre las nuevas tendencias</h6>
-                            <h3>Haz un presente <br> de tu elección</h3>
+                            <h6>Si buscas una sombra que destaque tu rostro</h6>
+                            <h3>colorores calidos <br> de tu elección</h3>
                             <a href="#" class="row-btn">Show me all</a>
                         </div>
                     </div>
                     <div class="row-img">
-                        <img src="images/buzo.jpg">
+                        <img src="images/sombra_1.jpg">
                     </div>
                 </div>
             </div>
@@ -101,13 +103,13 @@
             <div class="product-content">
                 <div class="box">
                     <div class="box-img">
-                        <img src="./images/remera-california.jpeg">
+                        <img src="./images/espuma_depilacion.jpg">
                     </div>
-                    <h3>Remera California</h3>
-                    <h4>Nuevos diseños 2023-24</h4>
+                    <h3>Crema dpilacion</h3>
+                    <h4>rapido uso y accion</h4>
                     <div class="inbox">
                         <div>
-                            <a href="#" class="price">$23.00</a>
+                            <a href="#" class="price">$2100.00</a>
                         </div>
                         <div class="rating">
                             <a href="#"><i class="ri-star-fill"></i></a>
@@ -124,13 +126,13 @@
 
                 <div class="box">
                     <div class="box-img">
-                        <img src="./images/remera-lisboa.jpeg">
+                        <img src="./images/esmalte.jpg">
                     </div>
-                    <h3>Remera Los Angeles</h3>
-                    <h4>Nuevos diseños 2023-24</h4>
+                    <h3>Esmaltes de uña</h3>
+                    <h4>Carta de colores a eleccion </h4>
                     <div class="inbox">
                         <div>
-                            <a href="#" class="price">$23.00</a>
+                            <a href="#" class="price">$3500.00</a>
                         </div>
                         <div class="rating">
                             <a href="#"><i class="ri-star-fill"></i></a>
@@ -147,13 +149,13 @@
 
                 <div class="box">
                     <div class="box-img">
-                        <img src="./images/short-agua.jpg">
+                        <img src="./images/set_belleza.jpg">
                     </div>
-                    <h3>Short de Agua</h3>
-                    <h4>Nuevos diseños 2023-24</h4>
+                    <h3>Set de belleza</h3>
+                    <h4>5 modelos diferentes</h4>
                     <div class="inbox">
                         <div>
-                            <a href="#" class="price">$27.00</a>
+                            <a href="#" class="price">$20000.00</a>
                         </div>
                         <div class="rating">
                             <a href="#"><i class="ri-star-fill"></i></a>
@@ -170,13 +172,13 @@
 
                 <div class="box">
                     <div class="box-img">
-                        <img src="./images/zapatillas-fucsia.jpeg">
+                        <img src="./images/limpieza_2.jpg">
                     </div>
-                    <h3>Zapatillas Lisboa</h3>
-                    <h4>Nuevos diseños 2023-24</h4>
+                    <h3>Cremas de limpieza</h3>
+                    <h4>Vitamida D, A y colageno</h4>
                     <div class="inbox">
                         <div>
-                            <a href="#" class="price">$32.00</a>
+                            <a href="#" class="price">$8000.00</a>
                         </div>
                         <div class="rating">
                             <a href="#"><i class="ri-star-fill"></i></a>
@@ -197,10 +199,9 @@
         <section class="cta-content">
             <div class="cta">
                 <div class="cta-text">
-                    <a href="#" class="logo"><img src="images/logo.png"></a>
+                    <a href="#" class="logo"><img src="images/logo_1.png"></a>
                     <h3>Ofertas especiales en nuestro catálogo de productos</h3>
-                    <p>La moda es una manera de expresarse y de autonomía en un determinado 
-                        periodo de tiempo.
+                    <p>Protegerse, quererse,   nuestros productos hacen que nuestra piel se vea mejor. 
                     </p>
                     <a href="#" class="btn">Descubre más</a>
                 </div>
@@ -244,9 +245,9 @@
             </div>
         </section>
 
-        <!--Copyright-->
+        <!--Copyright, se modifica nombre-->
         <div class="end-text">
-            <p>© 2023 All Rights Reserved by Emir Zatta</p>
+            <p>© 2023 All Rights Reserved by Miguel Castillo</p>
         </div>
 
         <!--ScrollReveal Script-->
